Conditions, Loops, operators

--- a/Operators.html
+++ b/Operators.html
@@ -3,6 +3,7 @@
     <head>
     </head>
     <body>
-        <script src="OperatorsAndConditions.js"></script>
+        <h1>Operators</h1>
+        <script src="Operators.js"></script>
     </body>
 </html>
