--- a/Dom/Dom_index.html
+++ b/Dom/Dom_index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id="heading-id">Dom File</h1>
     <p class="para-class">Dcoument Object Model</p>
-    <div>
+    <div id="akhil">
     <div>
         <p>Another div</p>
     </div><p>hey</p>
@@ -23,7 +23,7 @@
     <img src="DomChild.png" width="500px" height="300px">
 
     </div>
-
+    <div id="newBox">This is a new Box div</div>
     <div>
         <h3>Fruits</h3>
         <ul>
